--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Quando&display=swap"
       rel="stylesheet"
     />
-    <title>Dawitt/Maldonado</title>
+    <title>Dawit/Maldonado</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
